fix NotTask, broke unmarshal